# IIR

./: CMakeLists.txt  README
Include/RJF/: CUDA.hpp  Data.hpp  Default.hpp  Interface.hpp  TestFunctions.hpp
Scripts/: readNoise.m
Source/: CUDA.cpp  Default.cpp  Interface.cpp  Module.cmake  RejectionFilter.cpp  TestFunctions.cpp
Source/CUDA/: RJFcuda.cu
Source/CUDA/Test/: CUDATest.cu
Source/Test/: RejectionFilter.cpp  main.cpp
cmake/: FindCppUTest.cmake
